welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:13: error: value avance is not a member of Unit
retourne();avance;()avance() 
                    ^